# stormpy

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  pyproject.toml  setup.py
.github/workflows/: before-all-linux.sh  before-all-macos.sh  buildtest.yml  create_wheel.yml  create_wheel_scheduled.yml  formatapply.yml  release.yml  release_docker.yml  update_storm.yml  wheelpypi.yml
binder/: Dockerfile  requirements.txt
cmake/: config.cmake
examples/: 01-getting-started.py
examples/building_ctmcs/: 01-building-ctmcs.py
examples/building_dtmcs/: 01-building-dtmcs.py
examples/building_mas/: 01-building-mas.py
examples/building_mdps/: 01-building-mdps.py
examples/highlevel_models/: 02-highlevel-models.py
lib/stormpy/: __init__.py
lib/stormpy/all/: __init__.py
src/: boost.h  mod_core.cpp  mod_info.cpp  mod_pomdp.cpp  mod_storage.cpp  mod_utility.cpp
src/core/: bisimulation.cpp  common.h  core.cpp  environment.cpp  input.h  modelchecking.cpp  result.cpp  transformation.cpp  transformation.h
src/logic/: formulae.cpp
src/pars/: common.h
src/pomdp/: generator.cpp  generator.h  tracker.cpp  transformations.cpp  transformations.h
src/pycarl/: types.h
src/storage/: decomposition.cpp  distribution.cpp  matrix.cpp  model.cpp  model_components.cpp  scheduler.cpp  state.cpp  state.h  valuation.cpp
src/utility/: kwekMehlhorn.cpp  kwekMehlhorn.h
tests/core/: test_bisimulation.py  test_modelchecking.py  test_stormpy_parse.py  test_transformation.py
tests/dft/: test_analysis.py
tests/info/: test_info.py
tests/logic/: test_formulas.py
tests/pars/: test_parametric_model.py
tests/pomdp/: test_monitor_verifier.py  test_pomdp_transformations.py
tests/storage/: test_bitvector.py  test_expressions.py  test_jani.py  test_matrix.py  test_matrix_builder.py  test_maximal_end_components.py  test_model.py  test_model_components.py  test_prism.py  test_scheduler.py  test_state_generation.py
tests/utility/: test_kwek_mehlhorn.py  test_smtsolver.py
(+13 files in other folders)
