[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "stormpy"
description = "stormpy - Python Bindings for Storm"
readme = "README.md"
license.file = "LICENSE"
dynamic = ["version"]
authors = [
    { name = "M. Volk", email = "m.volk@tue.nl" },
    { name = "S. Junges", email = "sjunges@cs.ru.nl" }
]
requires-python = ">=3.7"
dependencies = [
    "pycarl>=2.2.0",
]
classifiers = [
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Homepage = "https://github.com/moves-rwth/stormpy"
Documentation = "https://moves-rwth.github.io/stormpy"
"Bug Tracker" = "https://github.com/moves-rwth/stormpy/issues"

[project.optional-dependencies]
numpy = [
    "numpy"
]
plot = [
    "matplotlib",
    "numpy",
    "scipy",
]
doc = [
    "Sphinx",
    "sphinx-bootstrap-theme",
    "nbsphinx",
    "ipython",
    "ipykernel",
] # also requires pandoc to be installed
dev = [
    "pytest",
    "nbval",
    "numpy",
]

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
cmake.args = [
#        '-DCMAKE_LIBRARY_OUTPUT_DIRECTORY=build/{wheel_tag}',
]
wheel.packages = ["lib/stormpy"]

[tool.scikit-build.cmake.define]
STORM_DIR_HINT=""
USE_STORM_DFT="ON"
USE_STORM_GSPN="ON"
USE_STORM_PARS="ON"
USE_STORM_POMDP="ON"


[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "lib/stormpy/_version.py"

[tool.black]
line-length = 160
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-glob='*.rst' --nbval"
testpaths = [
    "tests",
    "examples",
    "doc",
]
python_files = [
    "test*.py",
    "examples/*.py",
]
python_functions = [
    "*_test",
    "test_*",
    "example_*",
]
